scray-examples/ml-job-coordination/agent/oci-image-builder/src/main/resources/k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress3
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: app.scray.org
    http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: apple-service
                port:
                  number: 5678
